# valkey_agentic_demo

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SCHEDULE.ics  blog_post.md  demo.sh  dev.Dockerfile  docker-compose.yml  docker-entrypoint.sh  fanout.lua  go.mod  manage.py  prometheus.yaml  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  frontend.yml  (+1 more)
.streamlit/: config.toml
.tools/: bootstrap.sh
agents/: aggregator.py  app.py  classifier.py  dashboard.py  enrich.py  fanout.py  fetcher.py  latency_exporter.py  replay.py  sentiment.py  ui.py  user_reader.py  user_seeder.py  utils.py  valkey_metrics_exporter.py
api_gateway/: Dockerfile
assets/: style.css
boto3/: __init__.py
boto3_mock/: __init__.py
docker/: tools.Dockerfile
flake8/: __init__.py
jinja2/: __init__.py
moto/: __init__.py
pytest/: __init__.py
pytest_localstack/: __init__.py
scripts/: ec2_down.py  ec2_up.py  replay.py
tenacity/: __init__.py
tests/: conftest.py  test_boto3shim.py  test_ec2_up_down.py  test_enrich.py  test_fanout.py  test_replay.py  test_topic_page.py  test_user_reader.py  test_user_seeder.py
tools/: bootstrap_grafana.py  make_cc_csv.py
tools_wheel/: __init__.py
typer/: __init__.py  testing.py
ui-react/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  vite.config.ts
valkey/: Dockerfile  redis.conf
valkey_agentic_demo/: boto3shim.py
wheel/: bdist_wheel.py
(+44 files in other folders)
