

[project]
name = "valkey_agentic_demo"
version = "0.1.0"
description = "Valkey Agentic Demo"
authors = [{name="demo"}]
dependencies = []
requires-python = ">=3.11"

[project.scripts]
valkey-demo = "valkey_agentic_demo.launcher.cli:app"
flake8 = "flake8:main"
pytest = "pytest:main"

[tool.black]
line-length = 88
skip-string-normalization = true
extend-exclude = "agents|tests|tools|scripts"

[tool.isort]
profile = "black"
skip_glob = "agents/*,tools/*,tests/*,scripts/*"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[project.optional-dependencies]
full = [
    "typer",
    "boto3",
    "moto",
    "jinja2",
    "tenacity",
]
